--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -11,15 +11,15 @@
             <prodname>ServerView</prodname>
             <vrmlist>
                 <vrm
-                version="1.3"/>
+                version="2.0"/>
             </vrmlist>
             <brand>FUJITSU Software</brand>
-            <prognum>Cloud Monitoring Manager V1.3</prognum>
+            <prognum>Cloud Monitoring Manager V2.0</prognum>
             <component/>
             <series>Application Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Beta Version (2017-06-28)</edition>
+            <edition>Draft Version (09-2017)</edition>
             <booknumber> </booknumber>
         </bookid>
         <bookrights>
