--- a/DocSources/overview.ditamap
+++ b/DocSources/overview.ditamap
@@ -10,15 +10,15 @@
 		<prodinfo>
 			<prodname>ServerView</prodname>
 			<vrmlist>
-				<vrm version="1.3" />
+				<vrm version="2.0" />
 			</vrmlist>
 			<brand>FUJITSU Software</brand>
-			<prognum>Cloud Monitoring Manager V1.3</prognum>
+			<prognum>Cloud Monitoring Manager V2.0</prognum>
 			<component />
 			<series>Overview</series>
 		</prodinfo>
 		<bookid>
-			<edition>Beta Version (2017-06-28)</edition>
+			<edition>Draft Version (09-2017)</edition>
 			<booknumber> </booknumber>
 		</bookid>
 		<bookrights>
