--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -10,7 +10,7 @@
             <vrmlist>
                 <vrm version="2.0"/>
             </vrmlist>
-            <brand></brand>
+            <brand/>
             <prognum>Cloud Monitoring Manager V2.0</prognum>
             <component/>
             <series>System Operator's Guide</series>
@@ -45,10 +45,10 @@
         <topicref format="dita" href="sysoperator/install/c-install-prepare.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-swsetup.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-monservice.xml" type="concept"/>
+        <topicref format="dita" href="sysoperator/install/c-install-ksconfig.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-metricsagent.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-logagent.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-horizon.xml" type="concept"/>
-        <topicref format="dita" href="sysoperator/install/c-install-ksconfig.xml" type="concept"/>
     </chapter>
     <chapter href="sysoperator/operate/c-operate.xml">
         <topicref format="dita" href="sysoperator/operate/c-startstop.xml" type="concept"/>
