--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -46,9 +46,23 @@
         <topicref format="dita" href="sysoperator/install/c-install-swsetup.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-monservice.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/install/c-install-ksconfig.xml" type="concept"/>
-        <topicref format="dita" href="sysoperator/install/c-install-metricsagent.xml" type="concept"/>
-        <topicref format="dita" href="sysoperator/install/c-install-logagent.xml" type="concept"/>
-        <topicref format="dita" href="sysoperator/install/c-install-horizon.xml" type="concept"/>
+        <topicref format="dita" href="sysoperator/install/c-install-metricsagent.xml" type="concept">
+            <topicref format="dita" href="sysoperator/install/c-install-metricsagent-pre.xml" type="concept"/>
+            <topicref format="dita" href="sysoperator/install/c-install-metricsagent-inst.xml" type="concept"/>
+            <topicref format="dita" href="sysoperator/install/c-install-metricsagent-upd.xml" type="concept"/>
+            <topicref format="dita" href="sysoperator/install/c-install-metricsagent-enh.xml" type="concept"/>
+        </topicref>
+        <topicref format="dita" href="sysoperator/install/c-install-logagent.xml" type="concept">
+            <topicref format="dita" href="sysoperator/install/c-install-logagent-pre.xml" type="concept"/>
+            <topicref format="dita" href="sysoperator/install/c-install-logagent-inst.xml" type="concept"/>
+            <topicref format="dita" href="sysoperator/install/c-install-logagent-upd.xml" type="concept"/>
+        </topicref>
+        <topicref format="dita" href="sysoperator/install/c-install-horizon.xml" type="concept">
+            <topicref format="dita" href="sysoperator/install/c-install-horizon-inst.xml" type="concept">
+                <topicref format="dita" href="sysoperator/install/c-install-horizon-pre.xml" type="concept"/>
+            </topicref>
+            <topicref format="dita" href="sysoperator/install/c-install-horizon-config.xml" type="concept"/>
+        </topicref>
     </chapter>
     <chapter href="sysoperator/operate/c-operate.xml">
         <topicref format="dita" href="sysoperator/operate/c-startstop.xml" type="concept"/>
@@ -79,15 +93,13 @@
         <topicref format="dita" href="sysoperator/logs/c-logs-index.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/logs/c-logs-alarms.xml" type="concept"/>
     </chapter>
- 	<appendix href="sysoperator/appendix/r-metricsintro.xml" type="reference">
+    <appendix href="sysoperator/appendix/r-metricsintro.xml" type="reference">
         <topicref format="dita" href="sysoperator/appendix/r-metricsstandard.xml" type="reference"/>
         <topicref format="dita" href="sysoperator/appendix/r-metricsadditional.xml" type="reference"/>
-    </appendix>    
-        
+    </appendix>
     <!-- appendix format="dita" href="shared/appendix/r-confsettings.xml" type="reference">
         <topicref format="dita" href="shared/appendix/r-confsettings-metrics.xml" type="reference"/>
         <topicref format="dita" href="shared/appendix/r-confsettings-logs.xml" type="reference"/>
-    </appendix -->   
-    
+    </appendix -->
     <appendix href="shared/glossary/r-glossary.xml"/>
 </bookmap>
