--- a/DocSources/overview.ditamap
+++ b/DocSources/overview.ditamap
@@ -18,7 +18,7 @@
 			<series>Overview</series>
 		</prodinfo>
 		<bookid>
-			<edition>Draft Version (10-2017)</edition>
+			<edition>Draft Version for ST (2017-11-27)</edition>
 			<booknumber> </booknumber>
 		</bookid>
 		<bookrights>
