--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Pre-Draft for libvirt monitoring only (2017-11-16)</edition>
+            <edition>Draft Version for ST (2017-11-27)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
@@ -80,8 +80,7 @@
         <topicref format="dita" href="sysoperator/appmon/c-appmon-libs.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/appmon/c-appmon-config.xml" type="concept"/>
     </chapter>
-    <chapter href="sysoperator/operate/c-operate.xml"/>
-    <!-- chapter href="sysoperator/operate/c-operate.xml">
+    <chapter href="sysoperator/operate/c-operate.xml">
         <topicref format="dita" href="sysoperator/operate/c-startstop.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/operate/c-deletedata.xml" type="concept">
             <topicref format="dita" href="sysoperator/operate/c-removemetrics.xml" type="concept"/>
@@ -97,7 +96,7 @@
             <topicref format="dita" href="sysoperator/operate/c-backupcfg.xml" type="concept"/>
             <topicref format="dita" href="sysoperator/operate/c-backupdashboards.xml" type="concept"/>
         </topicref>
-    </chapter -->
+    </chapter>
     <chapter href="sysoperator/metrics/c-monitor.xml">
         <topicref format="dita" href="sysoperator/metrics/c-monitor-overview.xml" type="concept"/>
         <topicref format="dita" href="sysoperator/metrics/c-monitor-grafana.xml" type="concept"/>
