--- a/DocSources/overview.ditamap
+++ b/DocSources/overview.ditamap
@@ -39,6 +39,8 @@
 				type="concept" />
 			<topicref href="shared/gettingstarted/intro-copyright.xml"
 				type="concept" />
+			<topicref href="shared/gettingstarted/intro-highrisk.xml"
+				type="concept" />	
 			<topicref href="shared/gettingstarted/intro-export.xml"
 				type="concept" />
 			<!-- topicref href="shared/gettingstarted/intro-highrisk.xml" type="concept"/ -->
