--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -32,6 +32,7 @@
             <topicref href="shared/gettingstarted/c-webreferences.xml" type="concept"/>
             <topicref href="shared/gettingstarted/intro-trademarks.xml" type="concept"/>
             <topicref href="shared/gettingstarted/intro-copyright.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-highrisk.xml" type="concept" />	
             <topicref href="shared/gettingstarted/intro-export.xml" type="concept"/>
         </preface>
     </frontmatter>
