Included additional review comments on Overview

--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -19,7 +19,7 @@
             <series>Application Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version for ST (2017-11-23)</edition>
+            <edition>Draft Version (2017-11-29)</edition>
             <booknumber> </booknumber>
         </bookid>
         <bookrights>
