--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version for ST (2017-11-27)</edition>
+            <edition>Draft Version (2017-11-29)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
