Updated release date of draft versions

--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Start/Stop (2017-12-06)</edition>
+            <edition>Draft Version (2017-12-06)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
