Update for first part of operation/maitenance issues

--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version (2017-12-06)</edition>
+            <edition>InfluxDB (2017-12-07)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
