Updated draft date for automatic build

--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft for Review (2017-12-11)</edition>
+            <edition>Draft (2017-12-13)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
