--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft (2018-01-24)</edition>
+            <edition>Draft Version (2018-02-02)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
