--- a/DocSources/overview.ditamap
+++ b/DocSources/overview.ditamap
@@ -18,7 +18,7 @@
 			<series>Overview</series>
 		</prodinfo>
 		<bookid>
-			<edition>Draft Version (2018-02-02)</edition>
+			<edition>February 2018</edition>
 			<booknumber> </booknumber>
 		</bookid>
 		<bookrights>
