Changed publication date to MR

--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>February 2018</edition>
+            <edition>Draft Version (MR 2018-02-22)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
