Prepared ST Delivery for Grafana Option 3

--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -19,7 +19,7 @@
             <series>Application Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version (MR 2018-03-08)</edition>
+            <edition>Draft Version (ST Delivery 2018-03-12)</edition>
             <booknumber> </booknumber>
         </bookid>
         <bookrights>
