--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version (ST Delivery 2018-03-12)</edition>
+            <edition>Draft Version (2018-03-13)</edition>
             <booknumber/>
         </bookid>
         <bookrights>
