--- a/DocSources/overview.ditamap
+++ b/DocSources/overview.ditamap
@@ -18,7 +18,7 @@
 			<series>Overview</series>
 		</prodinfo>
 		<bookid>
-			<edition>Draft Version (ST Delivery 2018-03-12)</edition>
+			<edition>Draft Version (2018-03-22)</edition>
 			<booknumber> </booknumber>
 		</bookid>
 		<bookrights>
