--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -19,7 +19,7 @@
             <series>Application Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version (2018-03-22)</edition>
+            <edition>Version 2018-03-29</edition>
             <booknumber> </booknumber>
         </bookid>
         <bookrights>
