--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Draft Version (2018-03-22)</edition>
+            <edition>Version 2018-03-29</edition>
             <booknumber/>
         </bookid>
         <bookrights>
