--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Version 2018-04-12</edition>
+            <edition>2018-04-16</edition>
             <booknumber/>
         </bookid>
         <bookrights>
