--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -19,7 +19,7 @@
             <series>Application Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Version 2018-04-19</edition>
+            <edition>May 2018</edition>
             <booknumber> </booknumber>
         </bookid>
         <bookrights>
