--- a/DocSources/overview.ditamap
+++ b/DocSources/overview.ditamap
@@ -18,7 +18,7 @@
 			<series>Overview</series>
 		</prodinfo>
 		<bookid>
-			<edition>Version 2018-04-19</edition>
+			<edition>May 2018</edition>
 			<booknumber> </booknumber>
 		</bookid>
 		<bookrights>
