--- a/DocSources/sysoperator.ditamap
+++ b/DocSources/sysoperator.ditamap
@@ -16,7 +16,7 @@
             <series>System Operator's Guide</series>
         </prodinfo>
         <bookid>
-            <edition>Version 2018-05-23</edition>
+            <edition>May 2018</edition>
             <booknumber/>
         </bookid>
         <bookrights>
