--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -5,7 +5,7 @@
 <bookmap
                     xml:lang="en_US">
 
-    <title>Application Operator's Guide</title>
+    <title>TEST Application Operator's Guide</title>
     <bookmeta>
         <prodinfo>
             <prodname>FUJITSU Software</prodname>
