--- a/DocSources/appoperator.ditamap
+++ b/DocSources/appoperator.ditamap
@@ -2,104 +2,53 @@
 <!DOCTYPE bookmap PUBLIC "-//OASIS//DTD DITA BookMap//EN"
                          "">
 <!-- Copyright FUJITSU ENABLING SOFTWARE TECHNOLOGY GMBH 2018 -->
-<bookmap
-                    xml:lang="en_US">
-
-    <title>TEST Application Operator's Guide</title>
+<bookmap xml:lang="en_US">
+    <title>Application Operator's Guide</title>
     <bookmeta>
         <prodinfo>
             <prodname>FUJITSU Software</prodname>
             <vrmlist>
-                <vrm
-                version="2.0"/>
+                <vrm version="2.0"/>
             </vrmlist>
-            <brand></brand>
+            <brand/>
             <prognum>Cloud Monitoring Manager V2.0</prognum>
             <component/>
             <series>Application Operator's Guide</series>
         </prodinfo>
         <bookid>
             <edition>May 2018</edition>
-            <booknumber> </booknumber>
+            <booknumber/>
         </bookid>
         <bookrights>
-            <bookowner
-            name="."/>
+            <bookowner name="."/>
         </bookrights>
     </bookmeta>
-   
     <frontmatter>
-        <preface
-            format="dita" href="tenantuser/about/c-about.xml"
-                type="concept">
-            <topicref
-                href="tenantuser/about/c-readers.xml"
-                type="concept"/>
-            <topicref
-                href="shared/gettingstarted/intro-convent.xml"
-                type="concept"/>
-            <topicref
-                href="shared/gettingstarted/intro-abbrev.xml"
-                type="concept"/>
-            <topicref
-                href="shared/gettingstarted/intro-availabledoc.xml"
-                type="concept"/>
-            <topicref
-                href="shared/gettingstarted/c-webreferences.xml"
-                type="concept"/>
-            <topicref
-                href="shared/gettingstarted/intro-trademarks.xml"
-                type="concept"/>
-            <topicref
-                href="shared/gettingstarted/intro-copyright.xml"
-                type="concept"/>
-            <topicref 
-            	href="shared/gettingstarted/intro-highrisk.xml"
-				type="concept" />	
-            <topicref
-                href="shared/gettingstarted/intro-export.xml"
-       			type="concept"/>
+        <preface format="dita" href="tenantuser/about/c-about.xml" type="concept">
+            <topicref href="tenantuser/about/c-readers.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-convent.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-abbrev.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-availabledoc.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/c-webreferences.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-trademarks.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-copyright.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-highrisk.xml" type="concept"/>
+            <topicref href="shared/gettingstarted/intro-export.xml" type="concept"/>
         </preface>
     </frontmatter>
-    
-    <chapter
-            href="tenantuser/intro/c-intro.xml">
-        <topicref
-            format="dita" href="tenantuser/intro/c-usagescenario.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/intro/c-tutasks.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/intro/c-tucomponents-new.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/intro/c-tuusers.xml"
-        type="concept"/>
+    <chapter href="tenantuser/intro/c-intro.xml">
+        <topicref format="dita" href="tenantuser/intro/c-usagescenario.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/intro/c-tutasks.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/intro/c-tucomponents-new.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/intro/c-tuusers.xml" type="concept"/>
     </chapter>
-    
-    <chapter
-        href="tenantuser/access/c-tuaccess.xml"/>
-   
-    <chapter
-            href="tenantuser/monitor/c-tumonitor.xml">
-        <topicref
-            format="dita" href="tenantuser/monitor/c-tumon-overview.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/monitor/c-tumon-grafana.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/monitor/c-tumon-alarm.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/monitor/c-tumon-alert.xml"
-            type="concept"/>
-        <topicref format="dita"
-            href="tenantuser/monitor/c-tumon-statusinfo.xml"
-        type="concept"/>
+    <chapter href="tenantuser/access/c-tuaccess.xml"/>
+    <chapter href="tenantuser/monitor/c-tumonitor.xml">
+        <topicref format="dita" href="tenantuser/monitor/c-tumon-overview.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/monitor/c-tumon-grafana.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/monitor/c-tumon-alarm.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/monitor/c-tumon-alert.xml" type="concept"/>
+        <topicref format="dita" href="tenantuser/monitor/c-tumon-statusinfo.xml" type="concept"/>
     </chapter>
-    
     <appendix href="shared/glossary/r-glossary.xml"/>
-
 </bookmap>
